--- a/packages/rettangoli-ui/pages/specs/position/0003.html
+++ b/packages/rettangoli-ui/pages/specs/position/0003.html
@@ -18,4 +18,12 @@ tags: [test]
         <rtgl-view pos="abs" cor="full" bgc="suc"></rtgl-view>
         <rtgl-view pos="abs" cor="bottom" bgc="such" h="24"></rtgl-view>
     </rtgl-view>
+    <rtgl-view bgc="sucl" wh="200" pos="rel">
+        <rtgl-view bgc="suc" wh="48"></rtgl-view>
+        <rtgl-view pos="abs" cor="top" bgc="such" h="24"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" wh="200" pos="rel">
+        <rtgl-view pos="abs" cor="top" bgc="such" h="24"></rtgl-view>
+        <rtgl-view bgc="suc" wh="48" z="1"></rtgl-view>
+    </rtgl-view>
 </rtgl-view>
