--- a/packages/rettangoli-ui/pages/specs/align/0001.html
+++ b/packages/rettangoli-ui/pages/specs/align/0001.html
@@ -3,34 +3,34 @@ layout: default-layout.html
 tags: [test]
 ---
 
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="sucl" wh="200">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
+    <rtgl-view d="h" bgc="sucl" wh="80">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="c">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="c">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="e">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    </rtgl-view>
-
-    <rtgl-view d="h" bgc="sucl" wh="200" av="c">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="c" av="c">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="e" av="c">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="e">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" bgc="sucl" wh="200" av="e">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" av="c">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="c" av="e">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="sucl" wh="200" ah="e" av="e">
-        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view d="h" bgc="sucl" wh="80" av="e">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e">
+        <rtgl-view bgc="suc" wh="20"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
