--- a/packages/rettangoli-ui/pages/specs/align/0003.html
+++ b/packages/rettangoli-ui/pages/specs/align/0003.html
@@ -3,111 +3,111 @@ layout: default-layout.html
 tags: [test]
 ---
 
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-  <rtgl-view d="h" bgc="sucl" wh="200" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="200" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="200" av="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="sucl" wh="200" av="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view d="h" bgc="sucl" wh="200" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" av="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" av="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" av="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="c" av="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="c" av="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="c" av="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="e" av="c" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" ah="e" av="e" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="c" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="sucl" wh="200" g="m">
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
-    <rtgl-view bgc="suc" wh="50"></rtgl-view>
+  <rtgl-view d="h" bgc="sucl" wh="80" ah="e" av="e" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view d="h" bgc="sucl" wh="80" g="s">
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
+    <rtgl-view bgc="suc" wh="20"></rtgl-view>
   </rtgl-view>
 </rtgl-view>
