--- a/packages/rettangoli-ui/pages/specs/shadow/0001.html
+++ b/packages/rettangoli-ui/pages/specs/shadow/0001.html
@@ -2,8 +2,8 @@
 layout: default-layout.html
 tags: [test]
 ---
-<rtgl-view d="h" g="l" p="xl" wh="f">
-    <rtgl-view bgc="sucl" wh="100" shadow="s"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="100" shadow="m"></rtgl-view>
-    <rtgl-view bgc="sucl" wh="100" shadow="l"></rtgl-view>
+<rtgl-view d="h" g="xl" p="xl" wh="f">
+    <rtgl-view bgc="sucl" wh="50" shadow="s"></rtgl-view>
+    <rtgl-view bgc="sucl" wh="50" shadow="m"></rtgl-view>
+    <rtgl-view bgc="sucl" wh="50" shadow="l"></rtgl-view>
 </rtgl-view>
