--- a/packages/rettangoli-ui/pages/specs/image/src/0001.html
+++ b/packages/rettangoli-ui/pages/specs/image/src/0001.html
@@ -3,5 +3,5 @@ layout: default-layout.html
 tags: [test]
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-image src="https://www.w3schools.com/css/paris.jpg"></rtgl-image>
+    <rtgl-image src="/public/sample1.jpg"></rtgl-image>
 </rtgl-view>
