--- a/packages/rettangoli-ui/pages/specs/list-view/items/0002.html
+++ b/packages/rettangoli-ui/pages/specs/list-view/items/0002.html
@@ -7,11 +7,11 @@ tags: [test]
 </rtgl-view>
 
 <script type="module">
-  import { render, html } from "https://unpkg.com/uhtml";
+  import { render, html } from "https://cdn.jsdelivr.net/npm/uhtml@4.7.0/keyed.min.js";
   import { RettangoliView, RettangoliText, RettangoliListView } from "/scripts/entry-esm.js";
-  customElements.define("rtgl-view", RettangoliView);
-  customElements.define("rtgl-text", RettangoliText);
-  customElements.define("rtgl-list-view", RettangoliListView);
+  customElements.define("rtgl-view", RettangoliView({ render, html }));
+  customElements.define("rtgl-text", RettangoliText({ render, html }));
+  customElements.define("rtgl-list-view", RettangoliListView({ render, html }));
 
   const items = [{
     id: '1',
