--- a/packages/rettangoli-primitives-web/specs/image/dimensions/0001.html
+++ b/packages/rettangoli-primitives-web/specs/image/dimensions/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Dimensions
 ---
 <rtgl-view g="l" p="l" w="100vw" h="100vh" d="h">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
