--- a/packages/rettangoli-primitives-web/specs/image/src/0001.html
+++ b/packages/rettangoli-primitives-web/specs/image/src/0001.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Src
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
