--- a/packages/rettangoli-primitives-web/specs/text/anchor/0001.html
+++ b/packages/rettangoli-primitives-web/specs/text/anchor/0001.html
@@ -1,13 +1,11 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Anchor
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="su" p="m">
-        <rtgl-text s="bl" c="on-su-v">Some text <a href="/">Link</a> and some other text</rtgl-text>
-        <rtgl-view >
-
-        <rtgl-text s="bl" c="on-su-v"><a href="/">Link</a></rtgl-text>
+    <rtgl-view p="m">
+        <rtgl-text>Some text <a href="/">Link</a> and some other text</rtgl-text>
+        <rtgl-view>
+            <rtgl-text><a href="/">Link</a></rtgl-text>
         </rtgl-view>
     </rtgl-view>
 </rtgl-view>
