--- a/packages/rettangoli-primitives-web/specs/text/color/0003.html
+++ b/packages/rettangoli-primitives-web/specs/text/color/0003.html
@@ -1,7 +1,7 @@
 ---
-title: Color
+title: Color 3
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view bgc="ac" g="l" p="l" wh="f" fw="w">
     <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
     <rtgl-text c="fg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
     <rtgl-text c="mu-fg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
