--- a/packages/rettangoli-primitives-web/specs/text/ellipsis/index.html
+++ b/packages/rettangoli-primitives-web/specs/text/ellipsis/index.html
@@ -1,6 +1,5 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Ellipsis
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
     <rtgl-view bgc="su" p="m" g="l">
