--- a/packages/rettangoli-primitives-web/specs/text/color/0002.html
+++ b/packages/rettangoli-primitives-web/specs/text/color/0002.html
@@ -1,36 +1,9 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Color 2
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-su">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-su-v">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-su">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="i-on-su">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-p">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-pc">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-s">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-sc">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-e">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
-    <rtgl-view bgc="o" p="m">
-        <rtgl-text c="on-ec">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    </rtgl-view>
+<rtgl-view bgc="mu" g="l" p="l" wh="f" fw="w">
+    <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text c="fg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text c="mu-fg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text c="ac-fg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
 </rtgl-view>
