--- a/packages/rettangoli-primitives-web/specs/text/size/0001.html
+++ b/packages/rettangoli-primitives-web/specs/text/size/0001.html
@@ -1,16 +1,15 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Size
 ---
 
 <rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-text s="dm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="tl">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="tm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="ts">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="bl">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="bm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="bs">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="ll">abcdefghijklmnopqrstuvwxyz</rtgl-text>
-    <rtgl-text s="lm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="xs">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="sm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="md">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="lg">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="h4">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="h3">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="h2">abcdefghijklmnopqrstuvwxyz</rtgl-text>
+    <rtgl-text s="h1">abcdefghijklmnopqrstuvwxyz</rtgl-text>
 </rtgl-view>
