--- a/packages/rettangoli-primitives-web/specs/text/text-align/0001.html
+++ b/packages/rettangoli-primitives-web/specs/text/text-align/0001.html
@@ -1,26 +1,30 @@
 ---
-layout: default-layout.html
-tags: [test]
+title: Text Align
 ---
 
 <rtgl-view g="l" p="l" wh="f" fw="w">
   <rtgl-view bgc="suc" p="m" w="300">
-    <rtgl-text s="bl">
+    <rtgl-text>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
   <rtgl-view bgc="suc" p="m" w="300">
-    <rtgl-text s="bl" at="c">
+    <rtgl-text ta="s">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
   <rtgl-view bgc="suc" p="m" w="300">
-    <rtgl-text s="bl" at="j">
+    <rtgl-text ta="c">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
   <rtgl-view bgc="suc" p="m" w="300">
-    <rtgl-text s="bl" at="e">
+    <rtgl-text ta="j">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+    </rtgl-text>
+  </rtgl-view>
+  <rtgl-view bgc="suc" p="m" w="300">
+    <rtgl-text ta="e">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
