feat: button link variant,disabled;input file adjust

--- a/packages/rettangoli-ui/specs/button/variant/0001.html
+++ b/packages/rettangoli-ui/specs/button/variant/0001.html
@@ -9,4 +9,5 @@ title: Variants
     <rtgl-button v="de">Button</rtgl-button>
     <rtgl-button v="ol">Button</rtgl-button>
     <rtgl-button v="gh">Button</rtgl-button>
+    <rtgl-button v="lk">Button</rtgl-button>
 </rtgl-view>
