fix: input disabled

--- a/packages/rettangoli-ui/specs/input/disabled/0001.html
+++ b/packages/rettangoli-ui/specs/input/disabled/0001.html
@@ -2,12 +2,8 @@
 title: Disabled
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
-  Disabled
+  <rtgl-text>Disabled</rtgl-text>
   <rtgl-input disabled></rtgl-input>
-  <rtgl-input disabled="true"></rtgl-input>
-  <rtgl-input disabled="1"></rtgl-input>
-  Not Disabled
+  <rtgl-text>Not Disabled</rtgl-text>
   <rtgl-input></rtgl-input>
-  <rtgl-input disabled="false"></rtgl-input>
-  <rtgl-input disabled="0"></rtgl-input>
 </rtgl-view>
