--- a/packages/rettangoli-ui/specs/input/types/0001.html
+++ b/packages/rettangoli-ui/specs/input/types/0001.html
@@ -2,16 +2,16 @@
 title: Types
 ---
 <rtgl-view g="l" p="l" wh="f" fw="w">
-  email
+  <rtgl-text>email</rtgl-text>
   <rtgl-input type="email" ></rtgl-input>
-  password
+  <rtgl-text>password</rtgl-text>
   <rtgl-input type="password" ></rtgl-input>
-  number
+  <rtgl-text>number</rtgl-text>
   <rtgl-input type="number" ></rtgl-input>
-  tel
+  <rtgl-text>tel</rtgl-text>
   <rtgl-input type="tel" ></rtgl-input>
-  url
+  <rtgl-text>url</rtgl-text>
   <rtgl-input type="url" ></rtgl-input>
-  text
+  <rtgl-text>text</rtgl-text>
   <rtgl-input type="text" ></rtgl-input>
 </rtgl-view>
