feat:button icon,disabled

--- a/packages/rettangoli-ui/specs/button/disabled/0001.html
+++ b/packages/rettangoli-ui/specs/button/disabled/0001.html
@@ -3,8 +3,8 @@ title: Disabled
 ---
 
 <rtgl-view g="m" p="l" wh="f"">
-    Disabled
+    <rtgl-text>Disabled</rtgl-text>
     <rtgl-button disabled>Button</rtgl-button>
-    Not Disabled
+    <rtgl-text>Not Disabled</rtgl-text>
     <rtgl-button>Button</rtgl-button>
 </rtgl-view>
