--- a/packages/rettangoli-ui/specs/navbar/basic/0001.html
+++ b/packages/rettangoli-ui/specs/navbar/basic/0001.html
@@ -16,8 +16,13 @@ title: "Navbar - Basic"
 
   navbar.title = {
     label: "Navbar",
-    logoSrc: "/public/sample1.jpg",
     href: "/",
+    image: {
+      src: "/public/sample1.jpg",
+      width: 32,
+      height: 32,
+      alt: "Navbar",
+    },
   }
  
   navbar.connectedCallback();
