change all s -> sm, m -> md, l -> lg

--- a/packages/rettangoli-ui/viz/specs/button/disabled/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/disabled/0001.html
@@ -2,7 +2,7 @@
 title: Disabled
 ---
 
-<rtgl-view g="m" p="l" wh="f"">
+<rtgl-view g="md" p="lg" wh="f"">
     <rtgl-text>Disabled</rtgl-text>
     <rtgl-button disabled>Button</rtgl-button>
     <rtgl-text>Not Disabled</rtgl-text>
