--- a/packages/rettangoli-ui/viz/specs/button/icon/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/icon/0001.html
@@ -2,7 +2,7 @@
 title: Icon
 ---
 
-<rtgl-view g="m" p="l" wh="f"">
+<rtgl-view g="md" p="lg" wh="f"">
     <rtgl-button icon="text" v="pr"></rtgl-button>
     <rtgl-button icon="text" v="pr">Button</rtgl-button>
     <rtgl-button icon="text" v="se"></rtgl-button>
