--- a/packages/rettangoli-ui/viz/specs/button/margin/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/margin/0001.html
@@ -2,18 +2,18 @@
 title: Margin
 ---
 
-<rtgl-view g="m" p="l" wh="f" d="h" fw="w">
+<rtgl-view g="md" p="lg" wh="f" d="h" fw="w">
     <rtgl-view bgc="mu">
         <rtgl-button mt="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mt="s" t="ps">Button</rtgl-button>
+        <rtgl-button mt="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mt="m" t="ps">Button</rtgl-button>
+        <rtgl-button mt="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mt="l" t="ps">Button</rtgl-button>
+        <rtgl-button mt="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button mt="xl" t="ps">Button</rtgl-button>
@@ -23,13 +23,13 @@ title: Margin
         <rtgl-button mr="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mr="s" t="ps">Button</rtgl-button>
+        <rtgl-button mr="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mr="m" t="ps">Button</rtgl-button>
+        <rtgl-button mr="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mr="l" t="ps">Button</rtgl-button>
+        <rtgl-button mr="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button mr="xl" t="ps">Button</rtgl-button>
@@ -39,13 +39,13 @@ title: Margin
         <rtgl-button mb="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mb="s" t="ps">Button</rtgl-button>
+        <rtgl-button mb="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mb="m" t="ps">Button</rtgl-button>
+        <rtgl-button mb="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mb="l" t="ps">Button</rtgl-button>
+        <rtgl-button mb="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button mb="xl" t="ps">Button</rtgl-button>
@@ -55,13 +55,13 @@ title: Margin
         <rtgl-button ml="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button ml="s" t="ps">Button</rtgl-button>
+        <rtgl-button ml="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button ml="m" t="ps">Button</rtgl-button>
+        <rtgl-button ml="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button ml="l" t="ps">Button</rtgl-button>
+        <rtgl-button ml="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button ml="xl" t="ps">Button</rtgl-button>
@@ -71,13 +71,13 @@ title: Margin
         <rtgl-button m="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button m="s" t="ps">Button</rtgl-button>
+        <rtgl-button m="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button m="m" t="ps">Button</rtgl-button>
+        <rtgl-button m="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button m="l" t="ps">Button</rtgl-button>
+        <rtgl-button m="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button m="xl" t="ps">Button</rtgl-button>
@@ -87,13 +87,13 @@ title: Margin
         <rtgl-button mh="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mh="s" t="ps">Button</rtgl-button>
+        <rtgl-button mh="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mh="m" t="ps">Button</rtgl-button>
+        <rtgl-button mh="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mh="l" t="ps">Button</rtgl-button>
+        <rtgl-button mh="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button mh="xl" t="ps">Button</rtgl-button>
@@ -103,13 +103,13 @@ title: Margin
         <rtgl-button mv="xs" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mv="s" t="ps">Button</rtgl-button>
+        <rtgl-button mv="sm" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mv="m" t="ps">Button</rtgl-button>
+        <rtgl-button mv="md" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-button mv="l" t="ps">Button</rtgl-button>
+        <rtgl-button mv="lg" t="ps">Button</rtgl-button>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-button mv="xl" t="ps">Button</rtgl-button>
