--- a/packages/rettangoli-ui/viz/specs/button/size/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/size/0001.html
@@ -2,7 +2,7 @@
 title: Size
 ---
 
-<rtgl-view g="m" p="l" wh="f"">
+<rtgl-view g="md" p="lg" wh="f"">
     <rtgl-button s="sm">Button</rtgl-button>
     <rtgl-button>Button</rtgl-button>
     <rtgl-button s="md">Button</rtgl-button>
