--- a/packages/rettangoli-ui/viz/specs/button/variant/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/variant/0001.html
@@ -2,7 +2,7 @@
 title: Variants
 ---
 
-<rtgl-view g="m" p="l" wh="f"">
+<rtgl-view g="md" p="lg" wh="f"">
     <rtgl-button>Button</rtgl-button>
     <rtgl-button v="pr">Button</rtgl-button>
     <rtgl-button v="se">Button</rtgl-button>
