--- a/packages/rettangoli-ui/viz/specs/form/basic.html
+++ b/packages/rettangoli-ui/viz/specs/form/basic.html
@@ -1,7 +1,7 @@
 ---
 title: "Basic"
 ---
-<rtgl-view g="l" h="100vh" w="300" fw="w">
+<rtgl-view g="lg" h="100vh" w="300" fw="w">
   <rtgl-form id="form"></rtgl-form>
 </rtgl-view>
 
