--- a/packages/rettangoli-ui/viz/specs/image/dimensions/0001.html
+++ b/packages/rettangoli-ui/viz/specs/image/dimensions/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Dimensions
 ---
-<rtgl-view g="l" p="l" w="100vw" h="100vh" d="h">
+<rtgl-view g="lg" p="lg" w="100vw" h="100vh" d="h">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
     <rtgl-image width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
     <rtgl-image w="200" src="/public/sample1.jpg"></rtgl-image>
