--- a/packages/rettangoli-ui/viz/specs/input/types/0001.html
+++ b/packages/rettangoli-ui/viz/specs/input/types/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Types
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-text>email</rtgl-text>
   <rtgl-input type="email" ></rtgl-input>
   <rtgl-text>password</rtgl-text>
