--- a/packages/rettangoli-ui/viz/specs/navbar/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/navbar/basic/0001.html
@@ -1,7 +1,7 @@
 ---
 title: "Navbar - Basic"
 ---
-<rtgl-view g="l" h="100vh" w="f" fw="w">
+<rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-navbar id="navbar">
     <rtgl-view slot="right">
       <rtgl-button>
