--- a/packages/rettangoli-ui/viz/specs/popover/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/popover/basic/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Basic
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Popover</rtgl-button>
   <rtgl-popover id="popover">
     <rtgl-text>Popover Content</rtgl-text>
