--- a/packages/rettangoli-ui/viz/specs/text/anchor/0001.html
+++ b/packages/rettangoli-ui/viz/specs/text/anchor/0001.html
@@ -1,8 +1,8 @@
 ---
 title: Anchor
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-view p="m">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
+    <rtgl-view p="md">
         <rtgl-text>Some text <a href="/">Link</a> and some other text</rtgl-text>
         <rtgl-view>
             <rtgl-text><a href="/">Link</a></rtgl-text>
