--- a/packages/rettangoli-ui/viz/specs/text/ellipsis/index.html
+++ b/packages/rettangoli-ui/viz/specs/text/ellipsis/index.html
@@ -1,8 +1,8 @@
 ---
 title: Ellipsis
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="su" p="m" g="l">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
+    <rtgl-view bgc="su" p="md" g="lg">
         <rtgl-text s="bl" c="on-su-v" w="140">Some text and some other text with ellipsis</rtgl-text>
         <rtgl-text s="bl" c="on-su-v" ellipsis w="140">Some text and some other text with ellipsis</rtgl-text>
     </rtgl-view>
