--- a/packages/rettangoli-ui/viz/specs/text/size/0001.html
+++ b/packages/rettangoli-ui/viz/specs/text/size/0001.html
@@ -2,7 +2,7 @@
 title: Size
 ---
 
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
     <rtgl-text s="xs">abcdefghijklmnopqrstuvwxyz</rtgl-text>
     <rtgl-text s="sm">abcdefghijklmnopqrstuvwxyz</rtgl-text>
     <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
