--- a/packages/rettangoli-ui/viz/specs/text/size/0002.html
+++ b/packages/rettangoli-ui/viz/specs/text/size/0002.html
@@ -2,7 +2,7 @@
 title: Size 2
 ---
 
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
     <rtgl-text s="xs">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</rtgl-text>
     <rtgl-text s="sm">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</rtgl-text>
     <rtgl-text>abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</rtgl-text>
