--- a/packages/rettangoli-ui/viz/specs/text/text-style/0001.html
+++ b/packages/rettangoli-ui/viz/specs/text/text-style/0001.html
@@ -1,8 +1,8 @@
 ---
 title: Style
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
-    <rtgl-view bgc="su" p="m">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
+    <rtgl-view bgc="su" p="md">
         <rtgl-text> Start text <b>Bold</b> end text </rtgl-text>
         <rtgl-text> Start text <i> Italic </i> end text</rtgl-text>
         <rtgl-text> Start text <u>Underline</u> end text </rtgl-text>
