--- a/packages/rettangoli-ui/viz/specs/textarea/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/textarea/basic/0001.html
@@ -1,6 +1,6 @@
 ---
 title: Basic
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-textarea />
 </rtgl-view>
