--- a/packages/rettangoli-ui/viz/specs/button/width/0001.html
+++ b/packages/rettangoli-ui/viz/specs/button/width/0001.html
@@ -2,8 +2,8 @@
 title: Width
 ---
 
-<rtgl-view g="m" p="l" wh="f"">
-    <rtgl-view w="300" g="m" bgc="mu">
+<rtgl-view g="md" p="lg" wh="f"">
+    <rtgl-view w="300" g="md" bgc="mu">
         <rtgl-button w="200" t="p">Button</rtgl-button>
         <rtgl-button w="f" t="p">Button</rtgl-button>
         <rtgl-button t="p">Button</rtgl-button>
