--- a/packages/rettangoli-ui/viz/specs/image/object-fit/0001.html
+++ b/packages/rettangoli-ui/viz/specs/image/object-fit/0001.html
@@ -1,15 +1,15 @@
 ---
 title: Object Fit
 ---
-<rtgl-view g="l" p="l" wh="f">
-    <rtgl-view d="h" g="l">
+<rtgl-view g="lg" p="lg" wh="f">
+    <rtgl-view d="h" g="lg">
         <rtgl-image bgc="suc" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="cov" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="con" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="none" wh="60" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
     </rtgl-view>
 
-    <rtgl-view d="h" g="l">
+    <rtgl-view d="h" g="lg">
         <rtgl-image bgc="suc" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="cov" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="con" w="50" h="100" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
@@ -17,7 +17,7 @@ title: Object Fit
     </rtgl-view>
 
 
-    <rtgl-view d="h" g="l">
+    <rtgl-view d="h" g="lg">
         <rtgl-image bgc="suc" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="cov" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
         <rtgl-image bgc="suc" of="con" w="100" h="50" width="200" height="150" src="/public/sample1.jpg"></rtgl-image>
