--- a/packages/rettangoli-ui/viz/specs/image/src/0001.html
+++ b/packages/rettangoli-ui/viz/specs/image/src/0001.html
@@ -1,6 +1,6 @@
 ---
 title: Src
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
 </rtgl-view>
