--- a/packages/rettangoli-ui/viz/specs/input/disabled/0001.html
+++ b/packages/rettangoli-ui/viz/specs/input/disabled/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Disabled
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-text>Disabled</rtgl-text>
   <rtgl-input disabled></rtgl-input>
   <rtgl-text>Not Disabled</rtgl-text>
