--- a/packages/rettangoli-ui/viz/specs/page-outline/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/page-outline/basic/0001.html
@@ -1,7 +1,7 @@
 ---
 title: "Page Outline - Basic"
 ---
-<rtgl-view d="h" g="l" h="100vh" w="f" fw="w">
+<rtgl-view d="h" g="lg" h="100vh" w="f" fw="w">
   <rtgl-view id="content" flex="1" g="xl" h="100vh" sv>
     <rtgl-view>
       <rtgl-text id="title-1" s="h1">Title 1</rtgl-text>
