--- a/packages/rettangoli-ui/viz/specs/sidebar/basic/0002.html
+++ b/packages/rettangoli-ui/viz/specs/sidebar/basic/0002.html
@@ -1,7 +1,7 @@
 ---
 title: "Item groups"
 ---
-<rtgl-view g="l" h="100vh" w="f" fw="w">
+<rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
 </rtgl-view>
 
