--- a/packages/rettangoli-ui/viz/specs/text/text-align/0001.html
+++ b/packages/rettangoli-ui/viz/specs/text/text-align/0001.html
@@ -2,28 +2,28 @@
 title: Text Align
 ---
 
-<rtgl-view g="l" p="l" wh="f" fw="w">
-  <rtgl-view bgc="suc" p="m" w="300">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
+  <rtgl-view bgc="suc" p="md" w="300">
     <rtgl-text>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="m" w="300">
+  <rtgl-view bgc="suc" p="md" w="300">
     <rtgl-text ta="s">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="m" w="300">
+  <rtgl-view bgc="suc" p="md" w="300">
     <rtgl-text ta="c">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="m" w="300">
+  <rtgl-view bgc="suc" p="md" w="300">
     <rtgl-text ta="j">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
   </rtgl-view>
-  <rtgl-view bgc="suc" p="m" w="300">
+  <rtgl-view bgc="suc" p="md" w="300">
     <rtgl-text ta="e">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
     </rtgl-text>
