--- a/packages/rettangoli-ui/viz/specs/textarea/basic/0002.html
+++ b/packages/rettangoli-ui/viz/specs/textarea/basic/0002.html
@@ -1,7 +1,7 @@
 ---
 title: Basic 2
 ---
-<rtgl-view g="l" p="l" wh="f" fw="w">
+<rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-textarea
     rows="10"
     cols="80"
