fe: enable css styling from yaml

--- a/packages/rettangoli-fe/viz/static/index.html
+++ b/packages/rettangoli-fe/viz/static/index.html
@@ -5,6 +5,7 @@
     https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc1/dist/rettangoli-iife-ui.min.js
     "></script>
     <link rel="stylesheet" href="/public/theme.css">
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body class="dark">
     <custom-projects></custom-projects>
