implement navbar with rettangoli-fe

--- a/packages/rettangoli-fe/viz/static/index.html
+++ b/packages/rettangoli-fe/viz/static/index.html
@@ -5,10 +5,11 @@
     https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc1/dist/rettangoli-iife-ui.min.js
     "></script>
     <link rel="stylesheet" href="/public/theme.css">
-    <link rel="stylesheet" href="./main.css">
   </head>
   <body class="dark">
-    <custom-projects></custom-projects>
+    <custom-projects>
+      <button slot="below-title">Test Slot Button</button>
+    </custom-projects>
   </body>
   <script type="module" src="./main.js"></script>
 </html>
