--- a/packages/rettangoli-ui/viz/specs/navbar/basic/0004.html
+++ b/packages/rettangoli-ui/viz/specs/navbar/basic/0004.html
@@ -1,8 +1,11 @@
 ---
-title: "Navbar - Basic"
+title: "Navbar - With right content"
 ---
 <rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-navbar id="navbar">
+    <rtgl-view slot="right">
+      <rtgl-button>OK Primary</rtgl-button>
+    </rtgl-view>
   </rtgl-navbar>
 </rtgl-view>
 
