--- a/packages/rettangoli-ui/viz/specs/navbar/basic/0005.html
+++ b/packages/rettangoli-ui/viz/specs/navbar/basic/0005.html
@@ -1,8 +1,8 @@
 ---
-title: "Navbar - Basic"
+title: "Navbar - Propagate attributes"
 ---
 <rtgl-view g="lg" h="100vh" w="f" fw="w">
-  <rtgl-navbar id="navbar">
+  <rtgl-navbar id="navbar" bgc="mu">
   </rtgl-navbar>
 </rtgl-view>
 
