--- a/packages/rettangoli-ui/viz/specs/navbar/basic/0002.html
+++ b/packages/rettangoli-ui/viz/specs/navbar/basic/0002.html
@@ -1,5 +1,5 @@
 ---
-title: "Navbar - Basic"
+title: "Navbar - With logo and href"
 ---
 <rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-navbar id="navbar">
@@ -10,6 +10,13 @@ title: "Navbar - Basic"
   const navbar = document.getElementById('navbar');
   navbar.start = {
     label: "Navbar",
+    href: "/",
+    image: {
+      src: "/public/sample1.jpg",
+      width: 32,
+      height: 32,
+      alt: "Navbar",
+    },
   }
   navbar.render();
 </script>
