refactor sidebar component and add event handling (#60)
- Removed unused sidebar components and related imports.
- Introduced new sidebar event handlers for header and item clicks.
- Updated sidebar view data structure to include header and items with attributes.
- Added new specs for sidebar functionality, including various header configurations and item groups.
- Enhanced `RettangoliView` to support link behavior through href attributes.

--- a/packages/rettangoli-ui/viz/specs/sidebar/basic/0003.html
+++ b/packages/rettangoli-ui/viz/specs/sidebar/basic/0003.html
@@ -1,5 +1,5 @@
 ---
-title: "Basic"
+title: "With href whole header"
 ---
 <rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
@@ -9,6 +9,7 @@ title: "Basic"
   const sidebar = document.getElementById('sidebar');
   sidebar.header = {
     label: "Sidebar",
+    href: "#1",
     image: {
       src: "/public/sample1.jpg",
       width: 32,
@@ -18,16 +19,16 @@ title: "Basic"
   }
   sidebar.items = [
     {
-      id: "home",
       title: "Home",
+      href: "#2"
     },
     {
-      id: "about",
       title: "About",
+      href: "#3"
     },
     {
-      id: "contact",
       title: "Contact",
+      href: "#4"
     },
   ]
   sidebar.render();
