--- a/packages/rettangoli-ui/viz/specs/sidebar/basic/0002.html
+++ b/packages/rettangoli-ui/viz/specs/sidebar/basic/0002.html
@@ -8,14 +8,13 @@ title: "Item groups"
 <script>
   const sidebar = document.getElementById('sidebar');
 
-  sidebar.title = {
-    label: "Navbar",
-    href: "/",
+  sidebar.header = {
+    label: "Sidebar",
     image: {
       src: "/public/sample1.jpg",
       width: 32,
       height: 32,
-      alt: "Navbar",
+      alt: "Sidebar",
     },
   }
 
@@ -24,32 +23,32 @@ title: "Item groups"
       title: "Group 1",
       type: 'groupLabel',
       items: [{
+        id: "item-1",
         title: "Item 1",
-        slug: "/item1"
       }, {
+        id: "item-2",
         title: "Item 2",
-        slug: "/item2"
       }]
     },
     {
       title: "Group 2",
       type: 'groupLabel',
       items: [{
+        id: "item-3",
         title: "Item 3 ",
-        slug: "/item3"
       }, {
+        id: "item-4",
         title: "Item 4",
-        slug: "/item4"
       }]
     },
     {
       title: "Group 3",
       type: 'groupLabel',
       items: [{
+        id: "item-5",
         title: "Item 5",
-        slug: "/item5"
       }]
     },
   ]
-  sidebar.connectedCallback();
+  sidebar.render();
 </script>
