--- a/packages/rettangoli-ui/viz/specs/sidebar/basic/0006.html
+++ b/packages/rettangoli-ui/viz/specs/sidebar/basic/0006.html
@@ -1,5 +1,5 @@
 ---
-title: "Basic"
+title: "With path on label and image"
 ---
 <rtgl-view g="lg" h="100vh" w="f" fw="w">
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
@@ -9,26 +9,34 @@ title: "Basic"
   const sidebar = document.getElementById('sidebar');
   sidebar.header = {
     label: "Sidebar",
+    labelPath: "#1",
     image: {
       src: "/public/sample1.jpg",
       width: 32,
       height: 32,
       alt: "Sidebar",
+      path: "#2",
     },
   }
   sidebar.items = [
     {
-      id: "home",
       title: "Home",
+      path: "/home"
     },
     {
-      id: "about",
       title: "About",
+      path: "/about"
     },
     {
-      id: "contact",
       title: "Contact",
+      path: "/contact"
     },
   ]
+  sidebar.addEventListener('headerClick', (e) => {
+    console.log('header click', e.detail);
+  });
+  sidebar.addEventListener('itemClick', (e) => {
+    console.log('item click', e.detail);
+  });
   sidebar.render();
 </script>
