Enhance button, image, and view components with anchor styles
- Added anchor styles to button, image, and view components for consistent link behavior.
- Updated RettangoliImageElement to wrap images in anchor tags based on href attributes.
- Introduced new anchorStyles.js for reusable anchor styling.
- Added new specs for button and image components demonstrating anchor functionality.

--- a/packages/rettangoli-ui/viz/specs/page-outline/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/page-outline/basic/0001.html
@@ -30,14 +30,6 @@ title: "Page Outline - Basic"
     <rtgl-view>
       <rtgl-text id="title-9" s="h1">Title 9</rtgl-text>
     </rtgl-view>
-    
   </rtgl-view>
-  <rtgl-page-outline id="page-outline"></rtgl-page-outline>
+  <rtgl-page-outline id="page-outline" target-id="content"></rtgl-page-outline>
 </rtgl-view>
-
-<script>
-  const pageOutline = document.getElementById('page-outline');
-  const content = document.getElementById('content');
-  pageOutline.connectedCallback();
-  pageOutline.startListening(content);
-</script>
