--- a/packages/rettangoli-ui/viz/specs/popover/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/popover/basic/0001.html
@@ -4,7 +4,7 @@ title: Basic
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Popover</rtgl-button>
   <rtgl-popover id="popover">
-    <rtgl-text>Popover Content</rtgl-text>
+    <rtgl-text slot="content">Popover Content</rtgl-text>
   </rtgl-popover>
 </rtgl-view>
 
@@ -12,7 +12,13 @@ title: Basic
   const button = document.getElementById('button');
   const popover = document.getElementById('popover');
 
-  button.addEventListener('click', () => {
-    popover.open(button.shadow.querySelector("button"));
+  button.addEventListener('click', (e) => {
+    // TODO improve this interface
+    popover.transformedHandlers.open({
+      position: {
+        x: e.clientX,
+        y: e.clientY
+      }
+    });
   });
 </script>
