--- a/packages/rettangoli-ui/viz/specs/popover/basic/0002.html
+++ b/packages/rettangoli-ui/viz/specs/popover/basic/0002.html
@@ -1,5 +1,5 @@
 ---
-title: Placement
+title: Reference element and placement
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Popover</rtgl-button>
@@ -9,10 +9,5 @@ title: Placement
 </rtgl-view>
 
 <script>
-  const button = document.getElementById('button');
-  const popover = document.getElementById('popover');
-
-  button.addEventListener('click', () => {
-    popover.open(button.shadow.querySelector("button"));
-  });
+  // TODO implement reference and placements
 </script>
