--- a/packages/rettangoli-ui/viz/specs/select/basic/0001.html
+++ b/packages/rettangoli-ui/viz/specs/select/basic/0001.html
@@ -7,12 +7,11 @@ title: Basic
 
 <script>
   const select = document.getElementById('select')
-
   select.options = [
     { value: 1, label: 'Option 1' },
     { value: 2, label: 'Option 2' },
     { value: 3, label: 'Option 3' },
   ]
+  select.render();
 
-  select.reRender();
 </script>
