add rettangoli-vt, improve docs

--- a/packages/rettangoli-fe/viz/static/index.html
+++ b/packages/rettangoli-fe/viz/static/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Rettangoli Viz</title>
+    <title>Rettangoli FE Example</title>
     <script src="
-    https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc1/dist/rettangoli-iife-ui.min.js
+    https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc2/dist/rettangoli-iife-ui.min.js
     "></script>
     <link rel="stylesheet" href="/public/theme.css">
   </head>
