Create first version of todo list using rettangoli

--- a/packages/rettangoli-fe/viz/static/index.html
+++ b/packages/rettangoli-fe/viz/static/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="/public/theme.css">
   </head>
   <body class="dark">
-    <custom-projects>
-      <button slot="below-title">Test Slot Button</button>
-    </custom-projects>
+    <custom-todos></custom-todos>
   </body>
   <script type="module" src="./main.js"></script>
 </html>
