implmeent icon position

--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-icon-01.html
@@ -4,9 +4,12 @@ title: Icon
 
 <rtgl-view g="md" p="lg" wh="f"">
     <rtgl-button icon="text" v="pr"></rtgl-button>
+    <rtgl-button icon="spinner" v="pr">Button</rtgl-button>
     <rtgl-button icon="text" v="pr">Button</rtgl-button>
     <rtgl-button icon="text" v="se"></rtgl-button>
     <rtgl-button icon="text" v="se">Button</rtgl-button>
     <rtgl-button icon="text" s="sm">Button</rtgl-button>
     <rtgl-button icon="text" s="lg">Button</rtgl-button>
+    <rtgl-button icon="text" ip="s">Left Icon</rtgl-button>
+    <rtgl-button icon="text">Right Icon</rtgl-button>
 </rtgl-view>
