--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-square-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-square-01.html
@@ -3,6 +3,7 @@ title: Square Icon Buttons
 ---
 
 <rtgl-view g="md" p="lg" wh="f">
+    <rtgl-button sq icon="spinner"></rtgl-button>
     <rtgl-button sq icon="text"></rtgl-button>
     <rtgl-button sq icon="text" s="sm"></rtgl-button>
     <rtgl-button sq icon="text" s="lg"></rtgl-button>
