--- a/packages/rettangoli-ui/vt/specs/primitives/button/button-width-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/button/button-width-01.html
@@ -4,8 +4,8 @@ title: Width
 
 <rtgl-view g="md" p="lg" wh="f"">
     <rtgl-view w="300" g="md" bgc="mu">
-        <rtgl-button w="200" t="p">Button</rtgl-button>
-        <rtgl-button w="f" t="p">Button</rtgl-button>
-        <rtgl-button t="p">Button</rtgl-button>
+        <rtgl-button w="200">Button</rtgl-button>
+        <rtgl-button w="f">Button</rtgl-button>
+        <rtgl-button>Button</rtgl-button>
     </rtgl-view>
 </rtgl-view>
